# dtc

./: .gitignore  meson.build  pixi.toml  pyproject.toml  setup.py
.github/workflows/: build.yml
pylibfdt/: Makefile.pylibfdt  meson.build
tests/: meson.build  run_tests.sh
